udpated tagcanvas, removed pointer events on tablet and mobile to prevent scrolling blockage

--- a/docs/css/about.css
+++ b/docs/css/about.css
@@ -12,6 +12,12 @@
 #skills .content {
   width: 35%;
 }
+@media (max-width: 960px) {
+  #skills-canvas {
+    /* preventing scrolling prevention */
+    pointer-events: none;
+  }
+}
 
 #content .main-container {
   display: flex;
